--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -9,6 +9,8 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "strictPropertyInitialization": false,
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true,
   },
   "include": ["src/**/*.ts"],
 }
